feat: add a fix positioned table of sections

--- a/template.html
+++ b/template.html
@@ -37,6 +37,10 @@
       </a>
     </footer>
 
+    <div class="table-of-sections">
+      {{tos}}
+    </div>
+
     <script type="text/javascript">
       console.log('小程序就是一坨屎💩');
       console.log('           <small>以上仅个人观点</small>');
