chore: add CI build badge to the page

--- a/template.html
+++ b/template.html
@@ -23,7 +23,14 @@
     </div>
 
     <div class="generate-time">
-      生成时间 {{datetime}}
+      <div>
+        <a href="https://travis-ci.org/haishanh/mp-doc-one-page">
+          <img src="https://travis-ci.org/haishanh/mp-doc-one-page.svg?branch=master" alt="Build Status">
+        </a>
+      </div>
+      <div>
+        生成时间 {{datetime}}
+      </div>
     </div>
 
 
